# telegram-group-ping-bot

./: .env  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  DOCS.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/: README.md  main.py
src/bot/: README.md  __init__.py
src/config/: README.md  __init__.py  config.py  logging_config.py  logging_config.yaml  text_config.py
src/config/logging/: logging_config.py  logging_config.yaml
src/config/text/: __init__.py  admin_texts.py  buttons_text.py  group_messages.py  group_texts.py  keyboards_text.py  private_messages.py  private_texts.py
src/db/: README.md  __init__.py  db.py  schema_validators.py
src/keyboards/: README.md  __init__.py  inline_keyboards.py  keyboards.py
src/middlewares/: __init__.py  startup_shutdown_middleware.py
src/routers/: README.md  __init__.py  command_router.py  group_commands.py  private_commands.py
src/routers/admin_router/: __init__.py
src/routers/callback_router/: __init__.py  group_callbacks.py  private_callbacks.py
src/routers/callback_routers/: README.md  __init__.py  group_callbacks.py  private_callbacks.py
src/routers/command_routers/: group_commands.py  private_commands.py
src/routers/commands_routers/: __init__.py  group_commands.py  private_commands.py
src/routers/message_router/: __init__.py  group_messages.py  private_messages.py
src/routers/message_routers/: README.md  group_messages.py  private_messages.py
src/states/: __init__.py
src/utils/: README.md  __init__.py  bot_utils.py  telethon_client.py
src/utils/telethon_client/: __init__.py
system/: bot_session.session-journal
