[project]
name = "telegram-group-ping-bot"
version = "0.3"
description = "A Telegram bot for pinging group members quickly and easily, like in Discord."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["telegram", "bot", "group", "pinging", "automation"]
homepage = "https://t.me/group_mate_ping_bot"
repository = "https://github.com/IASAStudentCouncil/telegram-group-ping-bot"

[project.organization]
name = "IASA Student Council"
email = "studrada@gmail.com"

[[project.authors]]
name = "Yulian Zavodnyk"
email = "yulianzavodnyk@gmail.com"

[project.dependencies]
aiogram = "==3.12.0"
asyncio = "==3.4.3"
pymongo = "==4.8.0"
motor = "==3.5.1"
pytest = "==8.3.2"
pytest-asyncio = "==0.23.8"
pyyaml = "==6.0.2"
python-dotenv = "==1.0.1"